syntax = "proto3";

package com.example.user.v1;

option java_package = "com.example.user.v1";
option java_outer_classname = "UserServiceProto";
option java_multiple_files = true;

// User status enumeration
enum UserStatus {
    USER_STATUS_UNSPECIFIED = 0;
    USER_STATUS_ACTIVE = 1;
    USER_STATUS_INACTIVE = 2;
    USER_STATUS_SUSPENDED = 3;
}

// Role enumeration
enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_ADMIN = 2;
    ROLE_MODERATOR = 3;
}

// Address message for user addresses
message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip_code = 4;
    string country = 5;
}

// User message representing a user entity
message User {
    string id = 1;
    string email = 2;
    string username = 3;
    string first_name = 4;
    string last_name = 5;
    int32 age = 6;
    UserStatus status = 7;
    repeated Role roles = 8;
    Address address = 9;
    map<string, string> metadata = 10;
    int64 created_at = 11;
    int64 updated_at = 12;
}

// Request message for getting a user
message GetUserRequest {
    string user_id = 1;
    bool include_metadata = 2;
}

// Response message for getting a user
message GetUserResponse {
    User user = 1;
}

// Request message for creating a user
message CreateUserRequest {
    string email = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    int32 age = 5;
    Address address = 6;
}

// Response message for creating a user
message CreateUserResponse {
    User user = 1;
    bool success = 2;
}

// Request message for updating a user
message UpdateUserRequest {
    string user_id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    int32 age = 5;
    Address address = 6;
}

// Response message for updating a user
message UpdateUserResponse {
    User user = 1;
    bool success = 2;
}

// Request message for deleting a user
message DeleteUserRequest {
    string user_id = 1;
}

// Response message for deleting a user
message DeleteUserResponse {
    bool success = 1;
    string message = 2;
}

// Request message for listing users
message ListUsersRequest {
    int32 page_size = 1;
    string page_token = 2;
    UserStatus filter_status = 3;
}

// Response message for listing users
message ListUsersResponse {
    repeated User users = 1;
    string next_page_token = 2;
    int32 total_count = 3;
}

// Request message for streaming user updates
message WatchUsersRequest {
    repeated string user_ids = 1;
}

// Response message for streaming user updates
message WatchUsersResponse {
    User user = 1;
    string event_type = 2;
}

// User service definition
service UserService {
    // Get a single user by ID
    rpc GetUser(GetUserRequest) returns (GetUserResponse);

    // Create a new user
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

    // Update an existing user
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

    // Delete a user
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

    // List users with pagination
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

    // Watch for user updates (server streaming)
    rpc WatchUsers(WatchUsersRequest) returns (stream WatchUsersResponse);
}

// Bulk operations service
service BulkUserService {
    // Import multiple users (client streaming)
    rpc ImportUsers(stream CreateUserRequest) returns (ListUsersResponse);

    // Sync users bidirectionally (bidirectional streaming)
    rpc SyncUsers(stream UpdateUserRequest) returns (stream UpdateUserResponse);
}
